--- a/src/ProSettingsGUI/ProSettingsPanel.form
+++ b/src/ProSettingsGUI/ProSettingsPanel.form
@@ -86,6 +86,7 @@
                               <Component id="UpdateEmailButton" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="eMailDefault" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="SpecialAcquistionTickBox" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -161,7 +162,9 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="eMailDefault" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="111" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="SpecialAcquistionTickBox" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="100" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -774,6 +777,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UpdateEmailButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JCheckBox" name="SpecialAcquistionTickBox">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Special Acquisition (Row A with filtercombination 1, Row B with filtercombination 2, ...):"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="SpecialAcquistionTickBoxActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
